--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/imelos/i-resizer#readme",
   "dependencies": {
     "colors": "^1.3.3",
+    "image-size": "^0.7.4",
+    "node-dir": "^0.1.17",
     "sharp": "^0.22.1"
   }
 }
